# bash_action

./: CMakeLists.txt  README.md  package.xml
action/: Bash.action
config/: actions.yaml
launch/: bash_action_server.launch
scripts/: bash_action_server.py
tests/: index.html
